@@ -1,4 +1,4 @@
-dungeon: dungeon.c heap.c heap.h
+dungeon: dungeon.c dungeon.h heap.c heap.h 
 	gcc -Wall -Werror -ggdb3 -g dungeon.c heap.c -o dungeon
 
 clean:
