@@ -1,3 +1,5 @@
+2/21/2021 DH/BN: Implemented distance map in path_finding.c for both tunneling and non-tunneling monsters
+2/21/2021 DH/BN: Added dungeon.h, added path_finding.c
 2/17/2021 DH/BN/CB: Added endianess
 2/17/2021 BN: fixed saving and loading the arrays, and fixed loading rooms from a file
 2/17/2021 DH/BN/CB: Worked on correcting load_dungeon
